# platform-nes

./: .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  README.md  compose.yml  conf.py  index.rst  local.cmake.example
.github/workflows/: ci.yml
cmake/: platform-nesConfig.cmake.in
demo/: colors.c  colors.h  graphics.c  graphics.h  handlers.c  handlers.h  levels.c  levels.h  main.c  main.h  metasprites.c  metasprites.h  metatiles.c  metatiles.h  tracks.c  tracks.h
demo/chr/: font
demo/tiled/: rle_compress.py  smb1.tiled-session
demo/tiled/compute/: IRQHandler(id, behavior) {}.txt  nes2png.py
demo/tiled/include/: 1-1_c  1-1_s
demo/tiled/tilemap/: 1-1.tmx
demo/tiled/tilemap/json/: 1-1.tmj
demo/tiled/tileset/: overworld.tsx
docker/: Dockerfile.linux  demo.desktop.in
docs/: Doxyfile.advanced  Doxyfile.api  advanced.rst  api.rst  conf.py  index.rst  requirements.txt
docs/advanced/: audio.rst  input.rst  interrupts.rst  platform-nes.rst  reset.rst  technology.rst  types.rst  video.rst
docs/api/: audio.rst  input.rst  interrupts.rst  platform-nes.rst  reset.rst  technology.rst  types.rst  video.rst
docs/guide/: index.rst  introduction.rst  limitations.rst
include/: audio.h  nes_macro.h  platform-nes.c  platform-nes.h  reset.h  types.h  unified_macro.h  video.h
include/platform-nes/: audio.h  input.h  interrupts.h  nes_macro.h  platform-nes.c  platform-nes.h  reset.h  shadow.h  technology.h  types.h  unified_macro.h  video.h
scripts/: base.ld  chr_rom.ld
src/SDL3/: input.c  internal.h  interrupts.c  reset.c  technology.c  video.c
src/nes/: audio.c  input.c  interrupts.c  placeholder.c  technology.c  video.c
src/unified/: audio.c  input.c  interrupts.c  reset.c  technology.c  video.c
tools/: measure_sections.cmake
